# devpod-mcp

./: .gitignore  Cargo.toml  README.md  SKILL.md  index.html  install.ps1  install.sh  style.css
.devcontainer/: Dockerfile  devcontainer.json  initialize.sh
.github/hooks/: devcontainer-guard.json  devcontainer-guard.sh  devcontainer-skill-loader.json  devcontainer-skill-loader.sh
.github/workflows/: ci.yml  release.yml
crates/devcontainer-mcp/: Cargo.toml  build.rs
crates/devcontainer-mcp-core/: Cargo.toml
crates/devcontainer-mcp-core/src/: cli.rs  codespaces.rs  devcontainer.rs  devcontainer_config.rs  devpod.rs  docker.rs  error.rs  exec_shim.rs  file_ops.rs  lib.rs  process_tree.rs  wsl.rs
crates/devcontainer-mcp-core/src/auth/: aws.rs  azure.rs  gcloud.rs  github.rs  kubernetes.rs  mod.rs
crates/devcontainer-mcp-core/tests/: hook_guard_test.rs
crates/devcontainer-mcp/src/: main.rs  tools.rs
crates/devcontainer-mcp/src/tools/: common.rs  mod.rs
crates/devcontainer-mcp/src/tools/auth/: login.rs  logout.rs  mod.rs  select.rs  status.rs
crates/devcontainer-mcp/src/tools/codespaces/: create.rs  delete.rs  files.rs  list.rs  mod.rs  ports.rs  ssh.rs  stop.rs  view.rs
crates/devcontainer-mcp/src/tools/devcontainer/: build.rs  config.rs  exec.rs  files.rs  list_configs.rs  mod.rs  remove.rs  status.rs  stop.rs  up.rs
crates/devcontainer-mcp/src/tools/devpod/: build.rs  container.rs  context.rs  delete.rs  files.rs  list.rs  logs.rs  mod.rs  provider.rs  ssh.rs  status.rs  stop.rs  up.rs
crates/devcontainer-mcp/src/tools/wsl/: exec.rs  files.rs  list.rs  mod.rs  set_default.rs  shutdown.rs  stop.rs
crates/devpod-mcp/: Cargo.toml
crates/devpod-mcp-core/: Cargo.toml
crates/devpod-mcp-core/src/: devpod.rs  docker.rs  error.rs  lib.rs
crates/devpod-mcp/src/: main.rs  tools.rs
hooks/: devcontainer-guard.sh
skills/: auth.md  choosing-backend.md  codespaces.md  core-rule.md  devcontainer.md  devpod.md  file-ops.md  footer.md  header.md  self-healing.md  wsl.md
skills/_tools/: auth.txt  codespaces.txt  devcontainer.txt  devpod.txt  wsl.txt
