[package]
name = "devcontainer-mcp-core"
version = "0.1.0"
description = "Core library for devcontainer-mcp: DevPod/Codespaces CLI wrapper and Docker queries"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bollard = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
async-trait = "0.1"
base64 = "0.22"
