[package]
name = "devcontainer-mcp"
version = "0.1.0"
description = "MCP server and CLI for managing DevContainers"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
devcontainer-mcp-core = { path = "../devcontainer-mcp-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rmcp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
